--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,8 +30,9 @@ dependencies {
     compile 'com.android.support:appcompat-v7:24.1.1'
     compile 'com.jakewharton:kotterknife:0.1.0-SNAPSHOT'
     compile 'com.android.support:cardview-v7:24.1.1'
-    compile 'com.android.support:recyclerview-v7:24.0.1'
+    compile 'com.android.support:recyclerview-v7:24.1.1'
     compile 'com.android.support:design:24.1.1'
+    compile 'com.github.salomonbrys.kotson:kotson:2.3.0'
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 }
 repositories {
